docroot/themes/humsci/humsci_basic/src/scss/partials/objects/_layouts.row.scss
@use '../variables/general' as *;
@use '../functions/general' as *;
@use '../functions/color' as *;
@use '../mixins/theme' as *;
@use '../mixins/general' as *;
@use '../mixins/layout' as *;
@use '../mixins/breakpoints' as *;

// Container queries only accept SCSS variables.
$container-lg-width: hb-calculate-rems(992px);
$container-md-width: hb-calculate-rems(768px);
$container-sm-width: hb-calculate-rems(576px);
$container-with-sidebar-width: hb-calculate-rems(868px);

// Collection Paragraph Styles
.hs-paragraph-style {
  &--well,
  &--well-full-width {
    @include hb-well;
    padding: 0 hb-spacing-width();
    overflow: auto;

    .paragraph-item {
      .field__item__label {
        margin-top: 0;
      }

      &.ptype-hs-accordion {
        details {
          margin: 0;
          background-color: color('white', 'global');
        }
      }

      &.ptype-hs-hero-image,
      &.ptype-hs-gradient-hero-image,
      &.ptype-hs-carousel {
        width: 100%;

        .hb-hero-overlay::before,
        .hb-gradient-hero::before {
          background-color: color('gray-medium', 'global');
        }
      }
    }

    // Update spacing when there are 4 columns in well to have a tighter spacing.
    &:has(.field-hs-collection-items.item-per-row--4) {
      @include hb-colorful {
        padding: 0 hb-spacing-width('md');
      }
    }
  }

  &--well {
    width: 100%;
  }

  &--well-full-width {
    left: calc(-50vw + 50%);
    position: relative;
    width: 100vw;

    .hb-three-column--one-sidebar &,
    .hb-three-column--two-sidebar & {
      left: inherit;
      position: static;
      width: 100%;
    }

    > h2 {
      @include hb-page-width;
    }

    .field-hs-collection-items {
      .hb-three-column--no-sidebar & {
        @include hb-page-width;
      }
    }
  }

  &--gray-well {
    background-color: color('gray-well', 'global');
  }

  &--light-well {
    background-color: color('light-well');
  }
}

.field-hs-collection-items {
  --gap: #{hb-calculate-rems(48px)};

  display: flex;
  flex-wrap: wrap;
  gap: var(--gap);
  container-type: inline-size;
  container-name: collection;

  .paragraph-item {
    --columns: 1; // Default for components like Curriculum Maps
    --gap-count: calc(var(--columns) - 1);
    --gap-space: calc(var(--gap-count) * var(--gap));
    --max-width: calc((100% - var(--gap-space)) / var(--columns));
    flex: 0 0 var(--max-width);

    @include grid-media-min('sm') {
      margin: 0 !important;
    }
  }

  .ptype-hs-testimonial,
  .ptype-hs-accordion,
  .ptype-hs-timeline,
  .ptype-hs-postcard,
  .ptype-hs-view {
    --columns: 2;
  }

  .ptype-hs-text-area {
    --columns: 3;
  }

  &.item-per-row--1 {
    .paragraph-item {
      --columns: 1;
    }
  }

  &.item-per-row--2 {
    .ptype-hs-text-area {
      --columns: 2;
    }
  }

  &.item-per-row--3 {
    .ptype-hs-postcard,
    .ptype-hs-view {
      --columns: 3;
    }
  }

  &.item-per-row--4 {
    .ptype-hs-postcard,
    .ptype-hs-view {
      --columns: 4;
    }
  }

  // Responsive container queries (per component)
  @container collection (width < #{$container-lg-width}) {
    &.item-per-row--4 .ptype-hs-postcard,
    &.item-per-row--4 .ptype-hs-view {
      --columns: 3;
    }
  }

  @container collection (width < #{$container-md-width}) {
    .ptype-hs-testimonial,
    .ptype-hs-accordion,
    .ptype-hs-timeline {
      --columns: 1;
    }

    // We don't want the following components to be 2 items
    // per row when the collection is set to 1 column
    &:not(.item-per-row--1) {
      .ptype-hs-text-area,
      .ptype-hs-postcard,
      .ptype-hs-view {
        --columns: 2;
      }
    }
  }

  @container collection (width < #{$container-sm-width}) {
    // We need to add it here because if not it will ignored this
    // container query and only use the above one
    &:not(.item-per-row--1) {
      .ptype-hs-text-area,
      .ptype-hs-postcard,
      .ptype-hs-view {
        --columns: 1;
      }
    }
  }

  .hs-paragraph-style--well &,
  .hs-paragraph-style--well-full-width & {
    @include grid-media-min('sm') {
      margin: hb-spacing-width() auto;
    }
  }
}

// Overrides for one sidebar (main content is narrower)
// only when sidebar is visible
@include grid-media-min('lg') {
  .hb-three-column--one-sidebar .field-hs-collection-items {
    @container collection (width < #{$container-with-sidebar-width}) {
      &.item-per-row--4 .ptype-hs-postcard,
      &.item-per-row--4 .ptype-hs-view {
        --columns: 3;
      }

      .ptype-hs-testimonial,
      .ptype-hs-accordion,
      .ptype-hs-timeline {
        --columns: 1;
      }

      &:not(.item-per-row--1) {
        .ptype-hs-text-area,
        .ptype-hs-postcard,
        .ptype-hs-view {
          --columns: 2;
        }
      }
    }
  }
}

// Special title spacing for collections with an accordion as first child.
.paragraph--type--hs-collection
  > h2:has(+ .field-hs-collection-items > .ptype-hs-accordion:first-child),
.paragraph--type--hs-collection
  > h2:has(
    + .contextual + .field-hs-collection-items > .ptype-hs-accordion:first-child
  ) {
  margin-block-end: hb-calculate-rems(16px);
}

.paragraph--type--hs-collection:has(> h2)
  .field-hs-collection-items
  > .ptype-hs-accordion
  details {
  margin-top: 0;
}

